# open_creator_protocol

./: .gitignore  .solitarc.js  404.html  Anchor.toml  Cargo.toml  README.md  build.sh  index.html  lunr-index-1670359548850.json  lunr-index-1670359992204.json  lunr-index-1670362047855.json  lunr-index-1670384787301.json  lunr-index-1670388615254.json  lunr-index-1670412998970.json  lunr-index-1670468290463.json  lunr-index-1670519923684.json  lunr-index-1671056014592.json  lunr-index-1671068772887.json  lunr-index-1671302403642.json  lunr-index-1671302826613.json  lunr-index-1671746299224.json  lunr-index-1672363712921.json  lunr-index-1672420929136.json  lunr-index-1672519365724.json  lunr-index-1672967009835.json  lunr-index-1681880281063.json  lunr-index-1694497324715.json  lunr-index-1704320067145.json  lunr-index-1709674753515.json  lunr-index.json  package-lock.json  package.json  pnpm-lock.yaml  search-doc-1670359992204.json  search-doc-1670362047855.json  search-doc-1670384787301.json  search-doc-1670388615254.json  search-doc-1670412998970.json  search-doc-1670468290463.json  search-doc-1670519923684.json  (+16 more)
.github/workflows/: deploy_docs.yml  publish_npm.yml  release.yml  test.yml  test_docs.yml
assets/css/: styles.44a80ef7.css
assets/js/: 14eb3368.0567eb64.js  17896441.53aac0fe.js  1be78505.545098f4.js  2638f4e9.020ced25.js  2638f4e9.0ffbd78e.js  2638f4e9.133f1a06.js  2638f4e9.1b07f176.js  2638f4e9.1ebf5e74.js  2638f4e9.23aa57e1.js  2638f4e9.24b1352c.js  2638f4e9.255e1e04.js  2638f4e9.2959ef1a.js  2638f4e9.3e4005c6.js  2638f4e9.46b06fad.js  2638f4e9.4c8fb4dc.js  2638f4e9.5703c3ce.js  2638f4e9.5c266974.js  2638f4e9.65461a2a.js  2638f4e9.724b6827.js  2638f4e9.829a33ab.js  2638f4e9.91efdf72.js  2638f4e9.963a0333.js  2638f4e9.a05720f2.js  2638f4e9.a5dd31d4.js  2638f4e9.a71ac24a.js  2638f4e9.ad5b72df.js  2638f4e9.b2d8dd83.js  2638f4e9.b9655c86.js  2638f4e9.bdde68dd.js  2638f4e9.c7039c93.js  2638f4e9.c9186a82.js  2638f4e9.d21e36fa.js  2638f4e9.d6a30740.js  2638f4e9.e270ab75.js  2638f4e9.e61641ec.js  2638f4e9.ecf37376.js  339.2bc91700.js  343.c991541b.js  405aa22b.00111bb4.js  405aa22b.0067ce86.js  (+304 more)
category/mint-sdk/: index.html
category/open-creator-protocol/: index.html
docs/: .gitignore  README.md  docusaurus.config.js  package-lock.json  package.json
docs/docs/: 00-welcome.md  00-welcome.mdx
docs/docs/02-mint-sdk/: 00-overview.md  (+1 more)
mint-sdk/overview/: index.html
open-creator-protocol/architecture/: index.html
open-creator-protocol/cli/: index.html
open-creator-protocol/concepts/: index.html
open-creator-protocol/configuration/: index.html
open-creator-protocol/getting-started/: index.html
open-creator-protocol/on-chain-accounts/: index.html
open-creator-protocol/overview/: index.html
open-creator-protocol/tutorials/: index.html
programs/mtoken/: Cargo.toml
programs/mtoken/src/: action_ctx.rs  errors.rs  lib.rs  state.rs
programs/mtoken/src/instructions/: mod.rs
programs/mtoken/src/instructions/mint_manager/: init_mint_manager.rs  mod.rs  update_mint_manager.rs
programs/mtoken/src/instructions/nft_proxy/: approve.rs  burn.rs  close.rs  init_account.rs  lock.rs  mint_to.rs  revoke.rs  transfer.rs  unlock.rs  wrap.rs
programs/mtoken/src/instructions/policy/: init_policy.rs  mod.rs  update_policy.rs
programs/mtoken/src/instructions/ruleset/: init_ruleset.rs  init_ruleset_v0.rs  mod.rs  update_ruleset.rs  update_ruleset_v0.rs
programs/mtoken/src/instructions/token/: approve.rs  burn.rs  close.rs  init_account.rs  init_mint.rs  mod.rs  post_transfer.rs  pre_transfer.rs  revoke.rs  transfer.rs
programs/mtoken/tests/: test.rs
programs/open_creator_protocol/: Cargo.toml
programs/open_creator_protocol/src/: action.rs  action_ctx.rs  errors.rs  lib.rs  royalty.rs  state.rs
programs/open_creator_protocol/src/instructions/: mod.rs
programs/open_creator_protocol/src/instructions/nft_proxy/: approve.rs  burn.rs  close.rs  init_account.rs  lock.rs  migrate_to_mpl.rs  mint_to.rs  mod.rs  revoke.rs  transfer.rs  unlock.rs  wrap.rs
programs/open_creator_protocol/src/instructions/policy/: close_policy.rs  init_policy.rs  mod.rs  update_policy.rs
sdk/: .solitarc.js  index.ts  package-lock.json  package.json  pda.ts  tsconfig.json
sdk/errors/: formatLogs.ts  parseTransactionLogs.ts  programErrors.ts
sdk/idl/: mtoken.json  mtoken.ts  open_creator_protocol.json
sdk/lib/: index.d.ts  index.js  pda.d.ts  pda.js
sdk/src/: cli.ts  pda.ts
tests/: mint.ts  mintInit.test.ts  mintManagerInit.test.ts  mintManagerInitUpdate.test.ts  policy.spec.ts  rulesetInitUpdate.test.ts  token.spec.ts  utils.ts
(+12 files in other folders)
