[package]
name = "mtoken"
version = "0.1.4"
description = "mtoken is a super flexible json-rules-engine extension of the Community Managed Token (CMT)."
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "mtoken"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.25.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.25.0" }
community-managed-token = { version = "0.1.1", features = ["no-entrypoint"] }
json-rules-engine-fork = "0.9.4"
mpl-token-metadata = { version = "1.6.1", features = ["no-entrypoint"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.88"
solana-program = "1.10.41"
spl-associated-token-account = { version = "~1.0.5", features = ["no-entrypoint"] }
