[package]
name = "open_creator_protocol"
version = "0.2.1"
description = "Open Creator Protocol is an open protocol for creators to build utilities and policy engine for their tokens"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "open_creator_protocol"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []

[dependencies]
anchor-lang = { version = "0.25.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.25.0" }
community-managed-token = { version = "0.1.3", features = ["no-entrypoint"] }
json-rules-engine-fork = "0.9.7"
mpl-token-metadata = { version = "1.6.1", features = ["no-entrypoint"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.88"
solana-program = "^1.9.28"
spl-associated-token-account = { version = "~1.0.5", features = ["no-entrypoint"] }
spl-token = { version = "^3.3.0", features = ["no-entrypoint"] }
