[package]
name = "open_creator_protocol"
version = "0.3.5"
description = "Open Creator Protocol is an open protocol for creators to build utilities and policy engine for their tokens"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "open_creator_protocol"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
community-managed-token = { version = "^0.2.0", features = ["no-entrypoint"] }
json-rules-engine-fork = "0.9.7"
mpl-token-metadata = { version = "3.3.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.88"
solana-program = "~1.16.0"
spl-memo = { version = "^4.0.0", features = ["no-entrypoint"] }
